# infinipaint

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  conan_android_toolchain.cmake  conanfile.py
.github/workflows/: build-installers.yml  notary-auth-test.yml  notary-log.yml
android-project/app/: build.gradle  proguard-rules.pro
assets/data/config/: default_p2p.json
cmake/libmypaint/: CMakeLists.txt  config.h.in
conan/: export_libs.bat  export_libs.sh
conan/icu/all/: conanfile.py
conan/profiles/: android  macOS-arm64
conan/sdl/3.x/: conandata.yml
docs/: BUILDING.md
docs/design/: BUILDS-ANDROID.md  BUILDS.md  DISTRIBUTION-PHASE0.md  DISTRIBUTION-PHASE1.md  DISTRIBUTION.md  PERF-INVESTIGATION.md  PHASE1.md  PHASE2.md  PHASE3.md  PORTAL-AGENT-BRIEF.md  RASTER-WIRE-SYNC.md  TRANSITIONS.md
include/Helpers/: BezierEasing.cpp  BezierEasing.hpp  CanvasShareId.cpp  CanvasShareId.hpp  MathExtras.hpp  StringHelpers.cpp  StringHelpers.hpp
include/Helpers/Networking/: NetLibrary.cpp  NetLibrary.hpp
include/Helpers/NetworkingObjects/: NetObjManager.cpp  NetObjManager.hpp
linuxinstall/: com.inkternity.inkternity.desktop  com.inkternity.inkternity.metainfo.xml  com.inkternity.inkternity.xml  com.inkternity.inkternity.yml
macosinstall/: Info.plist  appicon.icns
scripts/: create_release.py  inject_turn_secret.py  prune_actions_artifacts.py  regen_icons.py  setup_dev_env.py
src/: AndroidJNICalls.cpp  AndroidJNICalls.hpp  ClientData.cpp  ClientData.hpp  CustomEvents.cpp  CustomEvents.hpp  DevKeys.cpp  DevKeys.hpp  DrawCamera.cpp  DrawCamera.hpp  FontData.cpp  GUIHolder.cpp  GUIHolder.hpp  GlobalConfig.cpp  GlobalConfig.hpp  HostMode.hpp  InputManager.cpp  InputManager.hpp  MainProgram.cpp  MainProgram.hpp  PublishRegistry.cpp  PublishRegistry.hpp  PublishedCanvases.cpp  PublishedCanvases.hpp  ResourceManager.cpp  RichTextUserInput.cpp  RichTextUserInput.hpp  Toolbar.cpp  Toolbar.hpp  VersionConstants.cpp  VersionConstants.hpp  World.cpp  World.hpp  WorldScreenshot.cpp  WorldScreenshot.hpp  main.cpp
src/Brushes/: BrushPresets.cpp  BrushPresets.hpp  LibMyPaintBridgeTest.cpp  LibMyPaintBridgeTest.hpp  LibMyPaintSkiaSurface.cpp  LibMyPaintSkiaSurface.hpp  LibMyPaintStrokeTest.cpp  LibMyPaintStrokeTest.hpp
src/CanvasComponents/: CanvasComponent.cpp  CanvasComponentType.hpp  MyPaintLayerCanvasComponent.cpp  MyPaintLayerCanvasComponent.hpp  TextBoxCanvasComponent.cpp  WaypointCanvasComponent.cpp  WaypointCanvasComponent.hpp
src/Distribution/: HostOnly.cpp  HostOnly.hpp  ProcessTests.cpp  ProcessTests.hpp  SideInstances.cpp  SideInstances.hpp
src/DrawingProgram/: DrawingProgram.cpp  DrawingProgram.hpp  DrawingProgramCache.cpp  DrawingProgramCache.hpp  DrawingProgramSelection.cpp  DrawingProgramSelection.hpp  ToolConfiguration.hpp
src/DrawingProgram/Layers/: DrawingProgramLayer.cpp  DrawingProgramLayerListItem.cpp  DrawingProgramLayerListItem.hpp  DrawingProgramLayerManager.cpp  DrawingProgramLayerManager.hpp  DrawingProgramLayerManagerGUI.cpp  LayerKind.hpp
src/DrawingProgram/Tools/: BrushTool.cpp  BrushTool.hpp  ButtonSelectTool.cpp  ButtonSelectTool.hpp  DrawingProgramToolBase.cpp  DrawingProgramToolBase.hpp  EditTool.cpp  EditTool.hpp  EllipseDrawTool.cpp  EllipseDrawTool.hpp  EraserTool.cpp  EraserTool.hpp  EyeDropperTool.cpp  EyeDropperTool.hpp  GridModifyTool.cpp  (+23 more)
src/GUIStuff/: GUIFloatAnimation.cpp  GUIFloatAnimation.hpp  GUIManager.cpp  GUIManager.hpp
src/ReaderMode/: ReaderMode.cpp  ReaderMode.hpp
src/RichText/: TextBox.cpp  TextBox.hpp
src/Screens/: DesktopDrawingProgramScreen.cpp  DesktopDrawingProgramScreen.hpp  DrawingProgramScreen.cpp  DrawingProgramScreen.hpp  FileSelectScreen.cpp  FileSelectScreen.hpp  PhoneDrawingProgramScreen.cpp  PhoneDrawingProgramScreen.hpp  Screen.cpp  Screen.hpp
src/StrokeVectorize/: SchneiderFit.cpp  SchneiderFit.hpp
src/Subscription/: TokenVerifier.cpp  TokenVerifier.hpp
src/Waypoints/: Edge.cpp  Edge.hpp  TreeView.cpp  TreeView.hpp  Waypoint.cpp  Waypoint.hpp  WaypointGraph.cpp  WaypointGraph.hpp
windowsinstall/: inkternity.manifest
(+71 files in other folders)
